--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,11 @@ spring.mail.username=${EMAIL}
 spring.mail.password=${PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+#JWT
+security.jwt.secret-key=${SECRET_KEY}
+# 1h in millisecond
+security.jwt.expiration-time=${EXPIRE_TIME}
+# 7 days in millisecond
+security.jwt.refresh-expiration-time=${REFRESH_TIME}
