--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,3 +20,4 @@ security.jwt.secret-key=${SECRET_KEY}
 security.jwt.expiration-time=${EXPIRE_TIME}
 # 7 days in millisecond
 security.jwt.refresh-expiration-time=${REFRESH_TIME}
+openweather.api.key=${API_KEY}
